--- a/top.css
+++ b/top.css
@@ -36,7 +36,7 @@ padding:0;
   padding-top: 140px;
   padding-bottom: 550px;
   margin-bottom: 50px;
-  background-image: url("../images/money.jpg");
+  background-image: url("https://nowrevolution.github.io/wwww/../images/money.jpg");
   background-size: cover;
   color: #f5f5f5;
   text-align: center;
